@@ -11,3 +11,4 @@ Murray Stokely		for a patch regarding timing of Rcpp autoloads
 James Bates		for a patch restoring RInside on Windows
 John Brzustowski	for a correction to the Windows initialization
 Peter Aberline		for contributing CMake support for all examples
+Theodore Lytras		for a patch helping to recover from (some) errors
